--- a/TodoApp/my-app-todo/dockerfile
+++ b/TodoApp/my-app-todo/dockerfile
@@ -6,6 +6,6 @@ RUN npm install -g @angular/cli
 
 COPY . .
 
-ENTRYPOINT [ "ng", "serve" ]
+ENTRYPOINT [ "ng", "serve", "--host", "0.0.0.0" ]
 
 RUN npm install
