--- a/my-app-todo/dockerfile
+++ b/my-app-todo/dockerfile
@@ -8,5 +8,5 @@ RUN npm install -g @angular/cli
 
 RUN npm install
 
-ENTRYPOINT [ "ng", "serve", "--host", "0.0.0.0" ]
+ENTRYPOINT [ "ng", "serve" ]
 
