--- a/my-app-todo/dockerfile
+++ b/my-app-todo/dockerfile
@@ -8,7 +8,7 @@ RUN npm install -g @angular/cli
 
 RUN npm install
 
-EXPOSE 4200
+# EXPOSE 4200
 
 ENTRYPOINT [ "ng", "serve", "--host", "0.0.0.0" ]
 
